--- a/Cargo.toml
+++ b/Cargo.toml
@@ -21,3 +21,7 @@ keywords = [
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+num = { version = "0.4.0", optional = true }
+
+[features]
+custom = ["num"]
